tests/expected/task-1/12-div-by-zero.uc.out
---
test: run suites/task-1/12-div-by-zero.uc
---
suites/task-1/12-div-by-zero.uc:5:12: execution error: Division by zero
    return x / y;
             ^


exit: 1
